--- a/index.html
+++ b/index.html
@@ -1126,7 +1126,7 @@
               </div>
 
               <div class="email">
-                <a href="mailto:jyotfte@gmail.com?subject=Type your subject here! &body=Please enter your message !"><i class="bi bi-envelope"></i>
+                <a href="mailto:jyotfte@gmail.com?subject=Type your subject here! &body=Please enter your Name,Review and attach one image: "><i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
                 <p>jyotfte@gmail.com</p></a>
               </div>
